--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
-<HTML>
-  Syntax highlighted code block
+<!DOCTYPE html>
+<html>
+<head>
+<title>OS WARS</title>
+</head>
 
-# Header 1
-## Header 2
-### Header 3
+<body>
+See The teams
+</body>
 
-- Bulleted
-- List
-
-1. Numbered
-2. List
-
-**Bold** and _Italic_ and `Code` text
-
-[Link](url) and ![Image](src)
+</html>
