--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <title>OS WARS</title>
 </head>
+<center><h1>OS Wars IV</h1></center>
 
 <body>
 See The teams
