--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="shortcut icon" href="/index/favicon.ico" type="image/x-icon"/>
 <title>OS WARS</title>
 </head>
 <center><h1>OS Wars IV</h1></center>
