--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <link rel="shortcut icon" href="/index/favicon.ico" type="image/x-icon"/>
 <title>OS WARS</title>
 </head>
-<center><h1>OS Wars IV</h1></center>
-
-<body>
-See The teams
-</body>
+<center><h1>OS Wars IV</h1>
+<h1>
+See The teams:
+</h1>
+</center>
 
 </html>
