--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 See The teams:
 </h1>
 </center>
-<a href="redteam.html">RED TEAM</a>
+<a href="redteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890167_60x60.png"/></a>
 </html>
