--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-<title>OS WARS</title>
+  <title>OS WARS</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 </head>
+  
 <center><h1>OS Wars IV</h1>
-<h1>
-See The teams:
-</h1>
-</center>
-<a href="redteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890167_60x60.png"/></a>
+  <h1>
+  See The teams:
+  </h1>
+  </center>
+  <a href="redteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890167_60x60.png"/></a>
 </html>
