--- a/index.html
+++ b/index.html
@@ -11,4 +11,6 @@
   </h1>
   </center>
   <a href="redteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890167_60x60.png"/></a>
+  <a href="greenteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890160_60x60.png"/></a>
+  <a href="blueteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890157_60x60.png"/></a>
 </html>
