--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   See The teams:
   </h1>
   </center>
-  <a href="redteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890167_60x60.png"/></a>
-  <a href="greenteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890160_60x60.png"/></a>
-  <a href="blueteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890157_60x60.png"/></a>
+  <left><a href="redteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890167_60x60.png"/></a></left>
+  <center><a href="greenteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890160_60x60.png"/></a></center>
+  <right><a href="blueteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890157_60x60.png"/></a></right>
 </html>
