--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>OS WARS</title>
-  <link rel="shortcut icon" href="https://oswars.tk/favicon.ico" type="image/x-icon"/>
+  <link rel="shortcut icon" type="image/x-icon" href="https://oswars.tk/favicon.ico" />
 </head>
   
 <center><h1>OS Wars IV</h1>
