--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>OS WARS</title>
+  <link rel="stylesheet" href="main.css"/>
   <link rel="shortcut icon" type="image/x-icon" href="https://oswars.tk/favicon.ico" />
 </head>
   
