--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <link rel="stylesheet" href="main.css"/>
   <link rel="shortcut icon" type="image/x-icon" href="https://oswars.tk/favicon.ico" />
 </head>
+{
+	font-family:Courier New, monospace;
+}
+{
+	background-color:black;
+	color:green;
+}
+  
   
 <center><h1>OS Wars IV</h1>
   <h1>
