--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="main.css"/>
   <link rel="shortcut icon" type="image/x-icon" href="https://oswars.tk/favicon.ico" />
 </head>
+<style>
 {
 	font-family:Courier New, monospace;
 }
@@ -12,8 +13,7 @@
 	background-color:black;
 	color:green;
 }
-  
-  
+
 <center><h1>OS Wars IV</h1>
   <h1>
   See The teams:
@@ -21,5 +21,6 @@
   </center>
   <a href="redteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890167_60x60.png"/></a>
   <a href="greenteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890160_60x60.png"/></a>
-  <a href="blueteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890157_60x60.png"/></a>
+  <a href="blueteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890157_60x60.png"/></a> 
+</style>
 </html>
