--- a/index.html
+++ b/index.html
@@ -5,15 +5,8 @@
   <link rel="stylesheet" href="main.css"/>
   <link rel="shortcut icon" type="image/x-icon" href="https://oswars.tk/favicon.ico" />
 </head>
-<style>
-{
-	font-family:Courier New, monospace;
-}
-{
-	background-color:black;
-	color:green;
-}
-</style>
+<body style="background-color:black;">
+</body>
 <center><h1>OS Wars IV</h1>
   <h1>
   See The teams:
