--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body style="background-color:black;">
 </body>
+  <style>{
+   color: #00ff00;
+    }</style>
 <center><h1>OS Wars IV</h1>
   <h1>
   See The teams:
