--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     }</style>
 <center><h1>OS Wars IV</h1>
   <h1>
+    Latest updates:
+    <img src="https://cdn2.scratch.mit.edu/get_image/project/222603010_282x210.png"/>
+   </h1>
+  <h2>
   See The teams:
-  </h1>
+  </h2>
   </center>
   <a href="redteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890167_60x60.png"/></a>
   <a href="greenteam.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32890160_60x60.png"/></a>
