--- a/redteam.html
+++ b/redteam.html
@@ -1,7 +1,9 @@
+<head>
+  <title>Red OS</title>
+</head>
 <body style="background-color:black;">
 </body>
   <style>{
    color: #00ff00;
     }</style>
 <a href="index.html"><img src="https://cdn2.scratch.mit.edu/get_image/user/32880598_60x60.png"/></a>
-red team
